--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <!-- SNEE -->
-    
+
 <!-- Снег (JS) -->
 <script src="snow.js?v=1" defer></script>
 </head>
@@ -25,68 +25,67 @@
 
 <header class="winter-banner">
 
-    <!-- kleiner weißer Text oben rechts -->
-    <div class="top-note">для совместного чтения с детьми 8–11 лет</div>
+<!-- kleiner weißer Text oben rechts -->
+<div class="top-note">для совместного чтения
+<p>с детьми 8–11 лет</p></div>
 
-    <h1 class="banner-title">Тайна Шерстяного Носка. Зима</h1>
+<h1 class="banner-title">Тайна Шерстяного Носка. Зима</h1>
 
 
-    <div class="buttons">
-        <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram</a>
-        <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook</a>
-        <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/instagram.svg">Instagram</a>
-        <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/youtube.svg">YouTube</a>
-        <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/bookstack.svg">Купить eBook</a>
-        <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/book.svg">Купить книгу</a>
-    </div>
+<div class="buttons">
+<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram</a>
+<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook</a>
+<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/instagram.svg">Instagram</a>
+<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/youtube.svg">YouTube</a>
+<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/bookstack.svg">Купить eBook</a>
+<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/book.svg">Купить книгу</a>
+</div>
 
 </header>
-    <div style="text-align:center; margin-top:-40px;">
-    <img src="veljesik2.png.webp" class="banner-illustration-left">
-    <img src="petrunja2.png.webp" class="banner-illustration-right">
+<div style="text-align:center; margin-top:-40px;">
+<img src="veljesik2.png.webp" class="banner-illustration-left">
+<img src="petrunja2.png.webp" class="banner-illustration-right">
 </div>
 
 <!-- ================= О КНИГЕ ================= -->
 <section>
-    <h2>О книге</h2>
-    <img src="Cover_Winter_Color.jpg.webp". class="section-img">
-    <p>Хотите понастольгировать и помечтать вместе с вашими детьми? 
-- Читайте про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса. Чтение о зимних приключениях десятилетних ребят  — это возможность вернуться в своё собственное детство, когда магия была реальностью, а мечты — осязаемыми. Эта история о дружбе, поддержке и о том, как важно оставаться верным себе и своим близким, помогает не только детям учиться важным жизненным урокам, но и взрослым вспомнить о самых главных ценностях. Воссоединитесь со своими детьми через сказку, подарите себе и им моменты настоящего волшебства и тепла в мире, где каждый из нас может снова поверить в чудеса и в себя.</p>
-</section>
-
-<!-- ================= О ПРЕМИИ ================= -->
-<section>
-    <h2>О премии «Заветная Мечта»</h2>
-    <img src="award.jpeg" class="section-img">
-    <p>«Заветная мечта» — российская национальная премия в области детской литературы. Учреждена в 2005 году Детским благотворительным фондом «Заветная мечта» . Вручалась с 2006 по 2009 год.</p>
+<h2>О книге</h2>
+<img src="Cover_Winter_Color.jpg.webp". class="section-img">
+<p>Хотите понастольгировать и помечтать вместе с вашими детьми?
+- Читайте про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса. Чтение о зимних приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда магия была реальностью, а мечты — осязаемыми. Эта история о дружбе, поддержке и о том, как важно оставаться верным себе и своим близким, помогает не только детям учиться важным жизненным урокам, но и взрослым вспомнить о самых главных ценностях. Воссоединитесь со своими детьми через сказку, подарите себе и им моменты настоящего волшебства и тепла в мире, где каждый из нас может снова поверить в чудеса и в себя.</p>
 </section>
 
 <!-- ================= ОБ АВТОРЕ ================= -->
 <section>
-    <h2>Об авторе</h2>
-    <img src="authorfoto1.jpg.webp" class="author-photo">
-    <p>Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность
+<h2>Об авторе</h2>
+<img src="authorfoto1.jpg.webp" class="author-photo">
+<p>Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность
 пересказывать истории, написанные жизнью, она, вероятно, унаследовала от своей
 прабабушки Ольги Сергеевны, которую в ее тесном окружении называли «Чехов в юбке».
 Василиса Сабашникова живет в Германии и пишет для взрослых и детей.
-В 2006 году Василиса стала финалистом Национальной детской литературной премии.
-В 2007 году – одним из победителей Европейского фестиваля на лучший русский язык в Санкт-Петербурге.</p>
+В 2006 году Василиса стала финалистом Национальной детской литературной премии "Заветная Мечта".
+В 2007 году – номинирована на Европейском фестивале на лучший русский язык в Санкт-Петербурге.</p>
 </section>
+
+<!-- ================= О ПРЕМИИ ================= -->
+<section>
+<h2>О премии «Заветная Мечта»</h2>
+<img src="award.jpeg" class="section-img">
+<p>«Заветная мечта» — российская национальная премия в области детской литературы. Учреждена в 2005 году Детским благотворительным фондом «Заветная мечта» . Вручалась с 2006 по 2009 год.</p>
+</section>
+
+<!-- ================= Отзывы ================= -->
+<section>
+<h2>Отзывы читателейЮ</h2>
+<img src="zhihorka_kot.png" class="section-img">
+<p>« Лена: ... </p>
+<img src="zhihorka_kot.png" class="section-img">å
+<p>« Юра: ... </p>
+<img src="papin_domovoj.png" class="section-img">
+<p>« Диана: ... </p>
+</section>
+
+
 <!-- FOOTER -->
 <footer style="text-align:center; padding:40px 20px; color:#0a1f4a; font-size:18px;">
-
-    <p>
-        © 2024 Василиса Сабашникова.<br>
-        Тексты, персонажи и иллюстрации защищены авторским правом.
-    </p>
-
-    <p style="margin-top:20px;">
-        <a href="impressum.html" style="color:#0a1f4a;">Impressum</a> |
-        <a href="datenschutz.html" style="color:#0a1f4a;">Datenschutz</a>
-    </p>
-
-</footer>
-
-</body>
-</html>
 
