--- a/index.html
+++ b/index.html
@@ -31,14 +31,19 @@
 
 <h1 class="banner-title">Тайна Шерстяного Носка. Зима</h1>
 
-
 <div class="buttons">
-<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram</a>
-<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook</a>
-<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/instagram.svg">Instagram</a>
-<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/youtube.svg">YouTube</a>
-<a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/bookstack.svg">Купить eBook</a>
+<a href="https://t.me/secret_woolen_sock" class="btn"><img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram</a>
+<a href="https://www.youtube.com/channel/UC3Wj9z_mYC45_hBoxne0oww" class="btn"><img class="icon" src="https://simpleicons.org/icons/youtube.svg">YouTube</a>
+<a href="https://books.apple.com/de/book/%D1%82%D0%B0%D0%B9%D0%BD%D0%B0-%D1%88%D0%B5%D1%80%D1%81%D1%82%D1%8F%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BD%D0%BE%D1%81%D0%BA%D0%B0-%D0%B7%D0%B8%D0%BC%D0%B0/id6449406162" class="btn"><img class="icon" src="https://simpleicons.org/icons/bookstack.svg">Купить eBook</a>
 <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/book.svg">Купить книгу</a>
+  <a href="#" class="btn" style="display:none;">
+    <img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook
+</a>
+<a href="#" class="btn" style="display:none;">
+    <img class="icon" src="https://simpleicons.org/icons/instagram.svg">Instagram
+</a>
+<a href="#" class="btn" style="display:none;">
+    <img class="icon" src="https://simpleicons.org/icons/tiktok.svg">TikTok
 </div>
 
 </header>
