--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 Василиса Сабашникова живет в Германии и пишет для взрослых и детей.
 В 2006 году Василиса стала финалистом Национальной детской литературной премии "Заветная Мечта".
 В 2007 году – номинирована на Европейском фестивале на лучший русский язык в Санкт-Петербурге.</p>
+
+<!-- VG WORT Pixel -->
+<img 
+  src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
+  width="1"
+  height="1"
+  alt=""
+>
 </section>
 
 <!-- ================= О ПРЕМИИ ================= -->
@@ -77,17 +85,31 @@
 <h2>О премии «Заветная Мечта»</h2>
 <img src="award.jpeg" class="section-img">
 <p>«Заветная мечта» — российская национальная премия в области детской литературы. Учреждена в 2005 году Детским благотворительным фондом «Заветная мечта» . Вручалась с 2006 по 2009 год.</p>
+<!-- VG WORT Pixel -->
+<img 
+  src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
+  width="1"
+  height="1"
+  alt=""
+>
 </section>
 
 <!-- ================= Отзывы ================= -->
 <section>
 <h2>Отзывы читателейЮ</h2>
-<img src="zhihorka_kot.png" class="section-img">
 <p>« Лена: ... </p>
 <img src="zhihorka_kot.png" class="section-img">å
 <p>« Юра: ... </p>
 <img src="papin_domovoj.png" class="section-img">
 <p>« Диана: ... </p>
+<!-- VG WORT Pixel -->
+<img 
+  src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
+  width="1"
+  height="1"
+  alt=""
+>
+
 </section>
 
 
