--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 <a href="https://t.me/secret_woolen_sock" class="btn"><img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram</a>
 <a href="https://www.youtube.com/channel/UC3Wj9z_mYC45_hBoxne0oww" class="btn"><img class="icon" src="https://simpleicons.org/icons/youtube.svg">YouTube</a>
 <a href="https://books.apple.com/de/book/%D1%82%D0%B0%D0%B9%D0%BD%D0%B0-%D1%88%D0%B5%D1%80%D1%81%D1%82%D1%8F%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BD%D0%BE%D1%81%D0%BA%D0%B0-%D0%B7%D0%B8%D0%BC%D0%B0/id6449406162" class="btn"><img class="icon" src="https://simpleicons.org/icons/bookstack.svg">Купить eBook</a>
-<a href="#" class="btn">style="display:none;"><img class="icon" src="https://simpleicons.org/icons/book.svg">Купить книгу</a>
-  <a href="#" class="btn" style="display:none;">
+<a href="#" class="btn" style="display:none;">
+    <img class="icon" src="https://simpleicons.org/icons/book.svg">Купить книгу
+</a>
+ 
+  <a href="https://www.facebook.com/profile.php?id=61584501591753" class="btn">
     <img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook
 </a>
 <a href="#" class="btn" style="display:none;">
@@ -44,7 +47,7 @@
 </a>
 <a href="#" class="btn" style="display:none;">
     <img class="icon" src="https://simpleicons.org/icons/tiktok.svg">TikTok
-</div>
+</a>
 
 </header>
 <div style="text-align:center; margin-top:-40px;">
@@ -55,7 +58,7 @@
 <!-- ================= О КНИГЕ ================= -->
 <section>
 <h2>О книге</h2>
-<img src="Cover_Winter_Color.jpg.webp". class="section-img">
+<img src="Cover_Winter_Color.jpg.webp" class="section-img">
 <p>Хотите понастольгировать и помечтать вместе с вашими детьми?
 - Читайте про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса. Чтение о зимних приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда магия была реальностью, а мечты — осязаемыми. Эта история о дружбе, поддержке и о том, как важно оставаться верным себе и своим близким, помогает не только детям учиться важным жизненным урокам, но и взрослым вспомнить о самых главных ценностях. Воссоединитесь со своими детьми через сказку, подарите себе и им моменты настоящего волшебства и тепла в мире, где каждый из нас может снова поверить в чудеса и в себя.</p>
 </section>
@@ -98,7 +101,7 @@
 <section>
 <h2>Отзывы читателейЮ</h2>
 <p>« Лена: ... </p>
-<img src="zhihorka_kot.png" class="section-img">å
+<img src="zhihorka_kot.png" class="section-img">
 <p>« Юра: ... </p>
 <img src="papin_domovoj.png" class="section-img">
 <p>« Диана: ... </p>
