--- a/index.html
+++ b/index.html
@@ -118,4 +118,12 @@
 
 <!-- FOOTER -->
 <footer style="text-align:center; padding:40px 20px; color:#0a1f4a; font-size:18px;">
+    © 2024 Vasilisa Sabashnikova — Все права защищены
+    <br><br>
+    <a href="#impressum" style="color:#0a1f4a; margin-right:20px;">Impressum</a>
+    <a href="#datenschutz" style="color:#0a1f4a;">Datenschutz</a>
+</footer>
+
+</body>
+</html>
 
