--- a/index.html
+++ b/index.html
@@ -99,12 +99,16 @@
 
 <!-- ================= Отзывы ================= -->
 <section>
-<h2>Отзывы читателейЮ</h2>
-<p>« Лена: ... </p>
+<h2>Отзывы читателей</h2>
+
+<p>«Лена: …»</p>
 <img src="zhihorka_kot.png" class="section-img">
-<p>« Юра: ... </p>
+
+<p>«Юра: …»</p>
 <img src="papin_domovoj.png" class="section-img">
-<p>« Диана: ... </p>
+
+<p>«Диана: …»</p>
+
 <!-- VG WORT Pixel -->
 <img 
   src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
@@ -112,8 +116,8 @@
   height="1"
   alt=""
 >
-
 </section>
+
 
 
 <!-- FOOTER -->
