--- a/index.html
+++ b/index.html
@@ -64,24 +64,38 @@
 </section>
 
 <!-- ================= ОБ АВТОРЕ ================= -->
-<section>
-<h2>Об авторе</h2>
-<img src="authorfoto1.jpg.webp" class="author-photo">
-<p>Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность
-пересказывать истории, написанные жизнью, она, вероятно, унаследовала от своей
-прабабушки Ольги Сергеевны, которую в ее тесном окружении называли «Чехов в юбке».
-Василиса Сабашникова живет в Германии и пишет для взрослых и детей.
-В 2006 году Василиса стала финалистом Национальной детской литературной премии "Заветная Мечта".
-В 2007 году – номинирована на Европейском фестивале на лучший русский язык в Санкт-Петербурге.</p>
+<!-- ================= ОБ АВТОРЕ ================= -->
+<section class="author-section">
 
-<!-- VG WORT Pixel -->
-<img 
-  src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
-  width="1"
-  height="1"
-  alt=""
->
+    <h2>Об авторе</h2>
+
+    <div class="author-wrapper">
+        <img src="veljesik2.png.webp" class="character-left" alt="">
+        
+        <img src="authorfoto1.jpg.webp" class="author-photo" alt="Автор">
+
+        <img src="petrunja2.png.webp" class="character-right" alt="">
+    </div>
+
+    <p>
+        Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность
+        пересказывать истории, написанные жизнью, она, вероятно, унаследовала от своей
+        прабабушки Ольги Сергеевны, которую в ее тесном окружении называли «Чехов в юбке».
+        Василиса Сабашникова живет в Германии и пишет для взрослых и детей.
+        В 2006 году Василиса стала финалистом Национальной детской литературной премии "Заветная Мечта".
+        В 2007 году – номинирована на Европейском фестивале на лучший русский язык в Санкт-Петербурге.
+    </p>
+
+    <!-- VG WORT Pixel -->
+    <img 
+      src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
+      width="1"
+      height="1"
+      alt=""
+    >
+
 </section>
+
 
 <!-- ================= О ПРЕМИИ ================= -->
 <section>
