--- a/index.html
+++ b/index.html
@@ -62,11 +62,6 @@
 </div> <!-- /buttons -->
 </header>
 
-<!-- Персонажи -->
-<div style="text-align:center; margin-top:-40px;">
-    <img src="veljesik2.png.webp" class="banner-illustration-left">
-    <img src="petrunja2.png.webp" class="banner-illustration-right">
-</div>
 
 <!-- ================= О КНИГЕ ================= -->
 <section>
@@ -84,6 +79,11 @@
 <section>
 <h2>Об авторе</h2>
 <img src="authorfoto1.jpg.webp" class="author-photo">
+    <div class="author-wrapper">
+    <img src="veljesik2.png.webp" class="character-left">
+    <img src="authorfoto1.jpg.webp" class="author-photo">
+    <img src="petrunja2.png.webp" class="character-right">
+</div>
 <p>
 Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность пересказывать истории, написанные жизнью, она унаследовала от прабабушки Ольги Сергеевны, которую называли «Чехов в юбке».  
 Василиса живет в Германии и пишет для взрослых и детей.  
