--- a/index.html
+++ b/index.html
@@ -22,34 +22,33 @@
 
 <header class="winter-banner">
 
-<!-- kleiner weißer Text oben rechts -->
-<div class="top-note">для совместного чтения
-<p>с детьми 8–11 лет</p></div>
+    <!-- Blaues Feld oben rechts -->
+    <div class="top-note">
+        для совместного чтения<br>
+        с детьми 8–11 лет
+    </div>
 
-<h1 class="banner-title">Тайна Шерстяного Носка. Зима</h1>
+    <!-- Titel zentriert -->
+    <h1 class="banner-title">Тайна Шерстяного Носка. Зима</h1>
 
-<!-- КНОПКИ -->
-<div class="buttons">
+    <!-- Кнопки -->
+    <div class="buttons">
 
-<a href="https://t.me/secret_woolen_sock" class="btn">
-    <img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram
-</a>
+        <a href="https://t.me/secret_woolen_sock" class="btn">
+            <img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram
+        </a>
 
-<a href="https://www.youtube.com/channel/UC3Wj9z_mYC45_hBoxne0oww" class="btn">
-    <img class="icon" src="https://simpleicons.org/icons/youtube.svg">YouTube
-</a>
+        <a href="https://www.youtube.com/channel/UC3Wj9z_mYC45_hBoxne0oww" class="btn">
+            <img class="icon" src="https://simpleicons.org/icons/youtube.svg">YouTube
+        </a>
 
-<a href="https://books.apple.com/de/book/%D1%82%D0%B0%D0%B9%D0%BD%D0%B0-%D1%88%D0%B5%D1%80%D1%81%D1%82%D1%8F%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BD%D0%BE%D1%81%D0%BA%D0%B0-%D0%B7%D0%B8%D0%BC%D0%B0/id6449406162" class="btn">
-    <img class="icon" src="https://simpleicons.org/icons/bookstack.svg">Купить eBook
-</a>
+        <a href="https://books.apple.com/de/book/%D1%82%D0%B0%D0%B9%D0%BD%D0%B0-%D1%88%D0%B5%D1%80%D1%81%D1%82%D1%8F%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BD%D0%BE%D1%81%D0%BA%D0%B0-%D0%B7%D0%B8%D0%BC%D0%B0/id6449406162" class="btn">
+            <img class="icon" src="https://simpleicons.org/icons/bookstack.svg">Купить eBook
+        </a>
 
-<a href="#" class="btn" style="display:none;">
-    <img class="icon" src="https://simpleicons.org/icons/book.svg">Купить книгу
-</a>
-
-<a href="https://www.facebook.com/profile.php?id=61584501591753" class="btn">
-    <img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook
-</a>
+        <a href="https://www.facebook.com/profile.php?id=61584501591753" class="btn">
+            <img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook
+        </a>
 
 <a href="#" class="btn" style="display:none;">
     <img class="icon" src="https://simpleicons.org/icons/instagram.svg">Instagram
@@ -78,12 +77,13 @@
 <!-- ================= ОБ АВТОРЕ ================= -->
 <section>
 <h2>Об авторе</h2>
-<img src="authorfoto1.jpg.webp" class="author-photo">
-    <div class="author-wrapper">
+
+<div class="author-wrapper">
     <img src="veljesik2.png.webp" class="character-left">
     <img src="authorfoto1.jpg.webp" class="author-photo">
     <img src="petrunja2.png.webp" class="character-right">
 </div>
+
 <p>
 Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность пересказывать истории, написанные жизнью, она унаследовала от прабабушки Ольги Сергеевны, которую называли «Чехов в юбке».  
 Василиса живет в Германии и пишет для взрослых и детей.  
@@ -91,14 +91,15 @@
 В 2007 году — номинирована на Европейском фестивале в Санкт-Петербурге.
 </p>
 
-<!-- VG WORT Pixel -->
 <img 
   src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
   width="1"
   height="1"
   alt=""
 >
+
 </section>
+
 
 <!-- ================= О ПРЕМИИ ================= -->
 <section>
