--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Тайна Шерстяного Носка. Зима</title>
+<title>Тайна Шерстяного Носка. <p>Зима</title></p>
 
 <!-- Шрифт -->
 <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
