--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
     <!-- Blaues Feld oben rechts -->
     <div class="top-note">
         для совместного чтения<br>
-        с детьми 8–11 лет
+        с детьми 8–11 лет!
     </div>
 
-    <!-- Titel zentriert -->
-    <h1 class="banner-title">Тайна Шерстяного Носка. Зима</h1>
+  <!-- Titel -->
+    <h1 class="banner-title">Тайна Шерстяного Носка</h1>
 
+    <!-- Untertitel -->
+    <h2 class="subtitle">Зима</h2>
+
+    
     <!-- Кнопки -->
     <div class="buttons">
 
