--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!-- ================= О ПРЕМИИ ================= -->
 <section>
 <h2>О премии «Заветная Мечта»</h2>
-<img src="award.jpeg" class="section-img">
+<img src="номинация.jpg" class="section-img">
 <p>
 «Заветная мечта» — российская национальная премия в области детской литературы.  
 Учреждена в 2005 году Детским благотворительным фондом «Заветная мечта».  
