--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <!-- Blaues Feld oben rechts -->
     <div class="top-note">
         для совместного чтения<br>
-        с детьми 8–11 лет!
+        с детьми 8–11 лет
     </div>
 
   <!-- Titel -->
     <h1 class="banner-title">Тайна Шерстяного Носка</h1>
 
     <!-- Untertitel -->
-    <h2 class="subtitle">Зима</h2>
+    <h1 class="subtitle">Зима</h1>
 
     
     <!-- Кнопки -->
@@ -147,7 +147,7 @@
 
 <!-- FOOTER -->
 <footer style="text-align:center; padding:40px 20px; color:#0a1f4a; font-size:18px;">
-    © 2024 Vasilisa Sabashnikova — Все права защищены
+    © 2024 Vasilysa Sabashnikova — Все права защищены
     <br><br>
     <a href="#impressum" style="color:#0a1f4a; margin-right:20px;">Impressum</a>
     <a href="#datenschutz" style="color:#0a1f4a;">Datenschutz</a>
