--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
 <!-- ================= О КНИГЕ ================= -->
 <section>
 <h2>О книге</h2>
+    <img src="veljesik2.png" class="character-left">>
+    <img src="spuren.webp" class="character-right">
 <img src="Cover_Winter_Color.jpg.webp" class="section-img">
 <p>
 Хотите понастольгировать и помечтать вместе с вашими детьми?  
-Читайте про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
-Чтение о зимних приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда магия была реальностью.  
+Читайте вслух про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
+Чтение о приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда между волшебством и реальностью были стерты грани и верилось, что в ручье у Площанихи живет русалка.  
 Эта история о дружбе, поддержке и о том, как важно оставаться верным себе.  
 </p>
 </section>
