Enhance book section with images and text
Added a new book section with images and description.

--- a/index.html
+++ b/index.html
@@ -69,10 +69,23 @@
 <!-- ================= О КНИГЕ ================= -->
 <section>
 <h2>О книге</h2>
-    <img src="veljesik2.png" class="character-left">>
+
+<div class="book-wrapper">
+    <img src="veljesik2.png" class="character-left">
+    
+    <img src="Cover_Winter_Color.jpg.webp" class="section-img">
+
     <img src="spuren.webp" class="character-right">
-<img src="Cover_Winter_Color.jpg.webp" class="section-img">
+</div>
+
 <p>
+Хотите понастольгировать и помечтать вместе с вашими детьми?  
+Читайте вслух про новогодние приключения Дениски и его друзей!  
+Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком…  
+</p>
+
+</section>
+
 Хотите понастольгировать и помечтать вместе с вашими детьми?  
 Читайте вслух про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
 Чтение о приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда между волшебством и реальностью были стерты грани и верилось, что в ручье у Площанихи живет русалка.  
