Add donation button and support message
Added a donation button and supporting text to the page.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
         <a href="https://www.facebook.com/profile.php?id=61584501591753" class="btn">
             <img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook
         </a>
+<a href="https://www.paypal.com/donate/?hosted_button_id=S4VP3KEHU85YG"
+   class="banner-btn donate-btn"
+   target="_blank">
+    ❤️ Поддержать новые книги
+</a>
 
+<p class="donate-note">
+    Если хотите участвовать в создании следующих книг — вы можете поддержать проект здесь.
+</p>
 <a href="#" class="btn" style="display:none;">
     <img class="icon" src="https://simpleicons.org/icons/instagram.svg">Instagram
 </a>
