--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 </a>
 
 <p class="donate-note">
+    Если хотите участвовать в создании следующих книг — поддержите проект здесь.
+</p>
+
+<p class="donate-note">
     Если хотите участвовать в создании следующих книг — вы можете поддержать проект здесь.
 </p>
 <a href="#" class="btn" style="display:none;">
