Update donation button text for clarity

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <a href="https://www.paypal.com/donate/?hosted_button_id=S4VP3KEHU85YG"
    class="banner-btn donate-btn"
    target="_blank">
-    ❤️ Поддержать новые книги
+    ❤️ Поддержать донатом новые книги
 </a>
 
 
