--- a/index.html
+++ b/index.html
@@ -82,16 +82,11 @@
     <img src="spuren.webp" class="character-right">
 </div>
 
-<p>
-Хотите понастольгировать и помечтать вместе с вашими детьми?  
-Читайте вслух про новогодние приключения Дениски и его друзей!  
-Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком…  
-</p>
 
 </section>
 
 Хотите понастольгировать и помечтать вместе с вашими детьми?  
-Читайте вслух про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
+Читайте им вслух про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
 Чтение о приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда между волшебством и реальностью были стерты грани и верилось, что в ручье у Площанихи живет русалка.  
 Эта история о дружбе, поддержке и о том, как важно оставаться верным себе.  
 </p>
@@ -147,14 +142,14 @@
 <section>
 <h2>Отзывы читателей</h2>
 
-<p>«Лена: …»</p>
+<p>«Лена: Мы ужасно хохотали над Бабой Ёжкой...</p>
 <img src="zhihorka_kot.png" class="section-img">
 
-<p>«Юра: …»</p>
+<p>«Юра: Окунулся в снег, в детство, дочитал уже сам, со слезами на глазах... хp>
 <img src="papin_domovoj.png" class="section-img">
 
-<p>«Диана: …»</p>
-
+<p>«Диана: Здорово, есть что вспомнить по ходу чтения и рассказать детям. </p>
+<img src="spuren.webp" class="section-img">
 <!-- VG WORT Pixel -->
 <img 
   src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
