--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 </div>
 
 
-</section>
-
-Хотите понастольгировать и помечтать вместе с вашими детьми?  
-Читайте им вслух про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
+<p>
+Хотите поностольгировать и помечтать вместе с вашими детьми?  
+Читайте им вслух про новогодние приключения Дениски и его друзей!  
+Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
 Чтение о приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда между волшебством и реальностью были стерты грани и верилось, что в ручье у Площанихи живет русалка.  
 Эта история о дружбе, поддержке и о том, как важно оставаться верным себе.  
 </p>
@@ -145,7 +145,7 @@
 <p>«Лена: Мы ужасно хохотали над Бабой Ёжкой...</p>
 <img src="zhihorka_kot.png" class="section-img">
 
-<p>«Юра: Окунулся в снег, в детство, дочитал уже сам, со слезами на глазах... хp>
+<p>«Юра: Окунулся в снег, в детство, дочитал уже сам — со слезами на глазах...»</p>
 <img src="papin_domovoj.png" class="section-img">
 
 <p>«Диана: Здорово, есть что вспомнить по ходу чтения и рассказать детям. </p>
