--- a/index.html
+++ b/index.html
@@ -161,7 +161,23 @@
     <a href="#impressum" style="color:#0a1f4a; margin-right:20px;">Impressum</a>
     <a href="#datenschutz" style="color:#0a1f4a;">Datenschutz</a>
 </footer>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const container = document.querySelector(".snow-container");
 
+    for (let i = 0; i < 30; i++) { // Anzahl Schneeflocken
+        const flake = document.createElement("div");
+        flake.className = "snowflake";
+
+        flake.style.left = Math.random() * 100 + "vw";
+        flake.style.animationDuration = 6 + Math.random() * 10 + "s";
+        flake.style.animationDelay = Math.random() * 10 + "s";
+        flake.style.transform = "scale(" + (0.4 + Math.random()) + ")";
+
+        container.appendChild(flake);
+    }
+});
+</script>
 </body>
-    <div class="snow-container"></div>
+
 </html>
