--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
     <img src="Cover_Winter_Color.jpg.webp" class="section-img">
 
 </div>
-
+<a href="https://share.google/1BjdVbed38RE4Kf7H" target="_blank" class="read-button">
+    Читать
+</a>
 
 <p>
-Хотите поностольгировать и помечтать вместе с вашими детьми?  
+Хотите поностальгировать и помечтать вместе с вашими детьми?  
 Читайте им вслух про новогодние приключения Дениски и его друзей!  
 Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
 Чтение о приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда между волшебством и реальностью были стерты грани и верилось, что в ручье у Площанихи живет русалка.  
