--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </a>
 
 <p>
-Хотите поностальгировать и помечтать вместе с вашими детьми?  
+Хотите ностальгировать и мечтать вместе с вашими детьми?  
 Читайте им вслух про новогодние приключения Дениски и его друзей!  
 Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
 Чтение о приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда между волшебством и реальностью были стерты грани и верилось, что в ручье у Площанихи живет русалка.  
