--- a/index.html
+++ b/index.html
@@ -95,15 +95,12 @@
 <div class="author-wrapper">
     <img src="veljesik2.png.webp" class="character-left">
     <img src="authorfoto1.jpg.webp" class="author-photo">
-    <img src="petrunja2.png.webp" class="character-right">
 </div>
 
-<p>
 Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность пересказывать истории, написанные жизнью, она унаследовала от прабабушки Ольги Сергеевны, которую называли «Чехов в юбке».  
 Василиса живет в Германии и пишет для взрослых и детей.  
 В 2006 году стала финалистом Национальной детской литературной премии "Заветная Мечта".  
 В 2007 году — номинирована на Европейском фестивале в Санкт-Петербурге.
-</p>
 
 <img 
   src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
@@ -138,13 +135,13 @@
 <section>
 <h2>Отзывы читателей</h2>
 
-<p>«Лена: Мы ужасно хохотали над Бабой Ёжкой...</p>
+<p>«Лена: Мы ужасно хохотали над Бабкой Ёжкой...</p>
 <img src="zhihorka_kot.png" class="section-img">
 
 <p>«Юра: Окунулся в снег, в детство, дочитал уже сам — со слезами на глазах...»</p>
 <img src="papin_domovoj.png" class="section-img">
 
-<p>«Диана: Здорово, есть что вспомнить по ходу чтения и рассказать детям. </p>
+<p>«Диана: Здорово, есть что вспомнить по ходу чтения и рассказать детям о своем детстве. </p>
 <img src="spuren.webp" class="section-img">
 <!-- VG WORT Pixel -->
 <img 
