--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <img src="zhihorka_kot.png" class="section-img">
 
 <p>«Юра: Окунулся в снег, в детство, дочитал уже сам — со слезами на глазах...»</p>
-<img src="papin_domovoj.png" class="section-img">
+<img src="petrunja2.png.webp" class="section-img">
 
 <p>«Диана: Здорово, есть что вспомнить по ходу чтения и рассказать детям о своем детстве. </p>
 <img src="spuren.webp" class="section-img">
