--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <img src="authorfoto1.jpg.webp" class="author-photo">
 </div>
 
-Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность пересказывать истории, написанные жизнью, она унаследовала от прабабушки Ольги Сергеевны, которую называли «Чехов в юбке».  
+Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность рассказывать истории она унаследовала от прабабушки Ольги Сергеевны, которую называли «Чехов в юбке».  
 Василиса живет в Германии и пишет для взрослых и детей.  
 В 2006 году стала финалистом Национальной детской литературной премии "Заветная Мечта".  
 В 2007 году — номинирована на Европейском фестивале в Санкт-Петербурге.
