--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <a href="#impressum" style="color:#0a1f4a; margin-right:20px;">Impressum</a>
     <a href="#datenschutz" style="color:#0a1f4a;">Datenschutz</a>
 </footer>
-    
+    <div class="snow-container"></div>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
     const container = document.querySelector(".snow-container");
