--- a/index.html
+++ b/index.html
@@ -151,6 +151,25 @@
   alt=""
 >
 </section>
+    <section id="review-help" style="max-width:700px;margin:40px auto;text-align:center;">
+    <h2>Как оставить отзыв в Apple Books</h2>
+    <p>Отзыв занимает всего 30 секунд и очень помогает книге находить новых читателей 💛</p>
+
+    <ol style="text-align:left;max-width:500px;margin:20px auto;font-size:20px;line-height:1.5;">
+        <li>Откройте приложение <strong>Apple Books</strong> на iPhone, iPad или Mac</li>
+        <li>Найдите книгу <em>«Тайна Шерстяного Носка. Зима»</em></li>
+        <li>Откройте страницу книги</li>
+        <li>Пролистайте вниз до раздела <strong>Отзывы</strong></li>
+        <li>Нажмите <strong>«Написать отзыв»</strong></li>
+        <li>Поставьте ⭐⭐⭐⭐⭐ и напишите пару слов</li>
+    </ol>
+
+    <a href="https://books.apple.com/de/book/id6449406162" 
+       style="display:inline-block;margin-top:20px;padding:12px 25px;background:#4f6bdc;color:#fff;border-radius:12px;text-decoration:none;font-size:20px;">
+       Перейти к книге
+    </a>
+</section>
+
 
 <!-- FOOTER -->
 <footer style="text-align:center; padding:40px 20px; color:#0a1f4a; font-size:18px;">
