--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="https://www.facebook.com/profile.php?id=61584501591753" class="btn">
             <img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook
         </a>
-<a href="https://www.paypal.com/donate/?hosted_button_id=S4VP3KEHU85YG"
+<a href="https://www.paypal.com/donate?hosted_button_id=Q5L5HP6HW3Q5L"
    class="banner-btn donate-btn"
    target="_blank">
     ❤️ Поддержать донатом новые книги
