--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 >
 </section>
     <section id="review-help" style="max-width:700px;margin:40px auto;text-align:center;">
-    <h2>Как оставить отзыв в Apple Books</h2>
+    <h2>Понравились приключения? Напишите короткий отзыв в Apple Books</h2>
     <p>Отзыв занимает всего 30 секунд и очень помогает книге находить новых читателей 💛</p>
 
     <ol style="text-align:left;max-width:500px;margin:20px auto;font-size:20px;line-height:1.5;">
@@ -161,7 +161,7 @@
         <li>Откройте страницу книги</li>
         <li>Пролистайте вниз до раздела <strong>Отзывы</strong></li>
         <li>Нажмите <strong>«Написать отзыв»</strong></li>
-        <li>Поставьте ⭐⭐⭐⭐⭐ и напишите пару слов</li>
+        <li>Отметьте ⭐⭐⭐⭐⭐ и напишите пару слов</li>
     </ol>
 
     <a href="https://books.apple.com/de/book/id6449406162" 
